# ToolFamily

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.28e34bd  CMakeLists.txt.user.420ee7c  cutwidget.cpp  cutwidget.h  cutwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  screenshotwidget.cpp  screenshotwidget.h  translateimage.cpp  translateimage.h  translateimage.ui  translateimagewidget.cpp  translateimagewidget.h  translateimagewidget.ui
QHotkey/: CMakeLists.txt
